Fixed brewery-top-section css bleedover on mobile

--- a/app/assets/stylesheets/brewery-top-section.scss
+++ b/app/assets/stylesheets/brewery-top-section.scss
@@ -5,20 +5,21 @@
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 20em;
+  height: auto;
 
   .clearbit-img {
     border-radius: 50%;
+    height: 20vmin
   }
 
   .brewery-top-section-box {
-  height: auto;
+  height: 50%;
   width: auto;
   padding: 1em;
   background-color: rgba(0, 0, 0, 0.236);
-  border-radius: 1em;
-  top: 50%;
-  transform: translateY(-50%);
+  border-radius: 0.8em;
+  margin-top: 0.8em;
+  margin-bottom: 0.5em;
   display: inline-block;
   overflow: hidden;
   position: relative;
@@ -36,10 +37,11 @@
   }
 
   .brewery-info {
+    font-size: 1.5vmax;
     color: white;
   }
   .brewery-name {
-    font-size: 6vmin;
+    font-size: 4vmin;
     font-size: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif
   }
@@ -51,7 +53,8 @@
   }
   
   .brewery-address {
-    margin-top: 0.5em;
-    font-size: 1.8vmax;
+    // margin-top: 0.4em;
+    // font-size: 1.8vmax;
+    font-size: 1.5vmax;
   }
 }
